include_directories(/home/lis/include )
cmake_minimum_required(VERSION 2.8)
find_package(PkgConfig)
if(PKG_CONFIG_FOUND)
#   pkg_check_modules (GLIB2   glib-2.0)
   pkg_check_modules(GTK2 gtk+-2.0 REQUIRED)
   include_directories(${GTK2_INCLUDE_DIRS})
   pkg_check_modules(LIBXML2 libxml-2.0 REQUIRED)
include_directories(${LIBXML2_INCLUDE_DIR})
    #blah
else()
#find_package(GTK2 2.6 REQUIRED gtk)
#find_package(LibXml2 REQUIRED)
#if(NOT GTK2_FOUND)
#    message(SEND_ERROR "Failed to find GTK2")
#    return()
#else()
#        include_directories(${GTK2_INCLUDE_DIR})
#include_directories(${LIBXML2_INCLUDE_DIR})
#endif()
endif(PKG_CONFIG_FOUND)
project(probez)
set(SOURCE_EXE window.c request.c dialogs.c)
#
set(SOURCE_LIB mask.c mathp.c plot.c projection.c proj_cyl.c proj_sph.c 3dvl.c)
add_library(probez SHARED ${SOURCE_LIB} ${LIBXML2_LIBRARY})
add_executable(probez-gtk ${SOURCE_EXE})
target_link_libraries(probez-gtk probez ${GTK2_LIBRARIES} vmath)

