# do cmake -DCMAKE_C_FLAGS="-Wall -pedantic" .. to compile with warnings
cmake_minimum_required(VERSION 2.8)
project(probez)
find_package(PkgConfig)
if(PKG_CONFIG_FOUND)
   pkg_check_modules(GTK2 gtk+-2.0 REQUIRED)
   include_directories(${GTK2_INCLUDE_DIRS})
   pkg_check_modules(LIBXML2 libxml-2.0 REQUIRED)
   include_directories(${LIBXML2_INCLUDE_DIRS})
   pkg_check_modules(GSL gsl REQUIRED)
   include_directories(${GSL_INCLUDE_DIRS})
else()
    message(SEND_ERROR "No pkg-config found")
endif(PKG_CONFIG_FOUND)
include_directories(${CMAKE_CURRENT_SOURCE_DIR})
set(SOURCE_EXE window.c request.c dialogs.c)
set(SOURCE_LIB mask.c mathp.c plot.c projection.c proj_cyl.c proj_sph.c 3dvl.c)
add_library(probez SHARED ${SOURCE_LIB})
target_link_libraries(probez
    ${LIBXML2_LIBRARIES}
    ${GSL_LIBRARIES}
    vmath pgl)
add_executable(probez-gtk ${SOURCE_EXE})
target_link_libraries(probez-gtk probez ${GTK2_LIBRARIES})
install(TARGETS probez DESTINATION lib)
install(TARGETS probez-gtk DESTINATION bin)
install(FILES probez.h DESTINATION include)
set(CPACK_PACKAGE_VERSION_MAJOR 0)
set(CPACK_PACKAGE_VERSION_MINOR 1)
set(CPACK_PACKAGE_VERSION_PATCH 1)
include(CPack)
